Readme and docker config

--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>spring-hello</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>spring-hello</name>
     <description>spring-hello</description>
     <properties>
         <java.version>11</java.version>
+        <registry_project_name>docker.io/library</registry_project_name>
     </properties>
     <dependencies>
         <dependency>
@@ -34,6 +35,19 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <runImage>harbor-repo.vmware.com/apjappnav/ubuntu:latest</runImage>
+                        <name>${registry_project_name}/${project.artifactId}:${project.version}</name>
+                    </image>
+                    <docker>
+                        <publishRegistry>
+                            <username>${registry_user}</username>
+                            <password>${registry_password}</password>
+                            <url>${registry_uri}</url>
+                        </publishRegistry>
+                    </docker>
+                </configuration>
             </plugin>
         </plugins>
     </build>
