--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>spring-hello</name>
     <description>spring-hello</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <registry.projectname>REPLACE-ME</registry.projectname>
         <registry.uri>REPLACE-ME</registry.uri>
         <registry.user>REPLACE-ME</registry.user>
@@ -41,9 +41,7 @@
                 <configuration>
                     <image>
                         <name>${registry.projectname}/${project.artifactId}:${project.version}</name>
-                        <buildpacks>
-                            <buildpack>urn:cnb:builder:paketo-buildpacks/java</buildpack>
-                        </buildpacks>
+                        <builder>${registry.projectname}/java8-builder:bionic</builder>
                         <runImage>${registry.projectname}/cnbs-sample-stack-run:bionic</runImage>
                     </image>
                     <docker>
